--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,9 +55,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Behaviours.cs" />
-     <Compile Include="Assets\Scripts\Movimentation.cs" />
-     <Compile Include="Assets\Scripts\Wander.cs" />
+     <Compile Include="Assets\Scripts\Agents\Predator.cs" />
+     <Compile Include="Assets\Scripts\Camera\Movimentation.cs" />
+     <Compile Include="Assets\Scripts\IA\Behaviours.cs" />
+     <Compile Include="Assets\Scripts\IA\Pursuit.cs" />
+     <Compile Include="Assets\Scripts\IA\Wander.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>C:/Users/T-Gamer/Downloads/ia_project/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
