--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,8 @@
      <Compile Include="Assets\Scripts\Camera\Movimentation.cs" />
      <Compile Include="Assets\Scripts\IA\Behaviours.cs" />
      <Compile Include="Assets\Scripts\IA\Evade.cs" />
+     <Compile Include="Assets\Scripts\IA\Flock.cs" />
+     <Compile Include="Assets\Scripts\IA\FlockManager.cs" />
      <Compile Include="Assets\Scripts\IA\Pursuit.cs" />
      <Compile Include="Assets\Scripts\IA\Wander.cs" />
  <Reference Include="Unity.Timeline.Editor">
