--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,7 +55,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scr.cs" />
      <Compile Include="Assets\Scripts\Camera\Movimentation.cs" />
+     <Compile Include="Assets\Scripts\IA\AgentAi.cs" />
      <Compile Include="Assets\Scripts\IA\Behaviours.cs" />
      <Compile Include="Assets\Scripts\IA\Evade.cs" />
      <Compile Include="Assets\Scripts\IA\Flock.cs" />
